Make sure the add block button is aligned correctly.

--- a/extensions/blocks/contact-form/editor.scss
+++ b/extensions/blocks/contact-form/editor.scss
@@ -49,6 +49,10 @@
 			}
 		}
 	}
+
+	.block-list-appender {
+		flex: 0 0 100%;
+	}
 }
 
 .jetpack-contact-form .components-placeholder {
